--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html,body, *{
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 .calculator{
@@ -19,16 +20,19 @@ html,body, *{
     background-color: black;
     width: 350px;
     height: 600px;
-    border-radius: 20px;
 
 }
 
 .display{
     text-align: end;
     background-color: grey;
-    margin: 10px;
-    height: 70px;
-    border-radius: 10px;
+    margin: 5px;   
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    font-size: 52px;
+    padding-right: 5px;
+    color: white;
 }
 
 .buttons{
@@ -38,8 +42,9 @@ html,body, *{
 }
 
 .btnr1{
-    background-color: blue;
+    background-color: orange;
     text-align: center;
+    border: 1px solid black;
 }
 
 .btnr1 > input{
@@ -53,8 +58,9 @@ html,body, *{
 }
 
 .btnr2{
-    background-color: greenyellow;
+    background-color: rgb(75, 75, 75);
     text-align: center;
+    border: 1px solid black;
 }
 
 .btnr2 > input{
